Fix keyboard zoom on iOS

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 120%;
+    font-size: 105%;
 }
 
 .hidden {
@@ -33,6 +33,17 @@ html {
 #switch-store-panel {
     color: black;
     background-color: white;
+}
+
+#switch-store-panel form {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+#switch-store-panel select {
+    flex-grow: 1;
+    font-size: 110%;
 }
 
 .theme1 #switch-store-panel {
@@ -125,6 +136,7 @@ html {
 
 #search-text {
     flex-grow: 1;
+    font-size: 120%;
 }
 
 #search-fieldset label {
